--- a/base/src/components/TeacherCard/styles.css
+++ b/base/src/components/TeacherCard/styles.css
@@ -22,11 +22,10 @@
 .teacher-card h1 {
     font-size: 22px;
     margin-top: 16px;
-}
 
-.avatar {
-    border-radius: 50%;
-    border: 4px solid #FCFCFC;
-    width: 147px;
-    height: 147px;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
